tests/validTest/validFunction.q
def void protoType1();
def void protoType2(uint32 a);
def uint32 protoType3();
def uint32 protoType4(uint32 a);

def void protoType1(){
    # empty
}

def void protoType2(uint32 a){
    # empty
}

def uint32 protoType3(){
    return 0
}

def uint32 protoType4(uint32 a){
    return a
}