tests/invalidTest/test_20.q
# EXPECT Error:type cannot be converted
def uint16 test(){

  uint32 ret2 = 5
  return ret2
  return 0
}

